--- a/index.html
+++ b/index.html
@@ -188,25 +188,21 @@
 								</style>
 								<h2>עמר</h2>
 								<div class="gallery-grid">
-									<!-- תמונה 1 -->
 									<div class="gallery-item">
 										<img src="images/gallery/omer2.jpg" alt="תמונה 1">
 										<div class="gallery-caption">אני, עמר, תאילנד 2023.</div>
 									</div>
 
-									<!-- תמונה 2 -->
 									<div class="gallery-item">
 										<img src="images/gallery/omer3.jpg" alt="תמונה 2">
 										<div class="gallery-caption">מלון Angsana, קורפו 2025.</div>
 									</div>
 
-									<!-- תמונה 3 -->
 									<div class="gallery-item">
 										<img src="images/gallery/omer1.jpg" alt="תמונה 3">
 										<div class="gallery-caption">ג׳ירפות בספארי, אפריקה 2025.</div>
 									</div>
 
-									<!-- תמונה 4 -->
 									<div class="gallery-item">
 										<img src="images/gallery/omer4.jpg" alt="תמונה 4">
 										<div class="gallery-caption">מיאמי ביץ׳, 2023.</div>
@@ -217,14 +213,45 @@
 									<div class="gallery-grid">
 									<div class="gallery-item">
 										<img src="images/gallery/ofek1.jpg" alt="תמונה 5">
-										<div class="gallery-caption">כיתוב לתמונה 5</div>
+										<div class="gallery-caption">אני, אופק בגלישה.</div>
 									</div>
 
 									<div class="gallery-item">
-										<img src="images/gallery/photo6.jpg" alt="תמונה 6">
-										<div class="gallery-caption">כיתוב לתמונה 6</div>
+										<img src="images/gallery/ofek3.jpg" alt="תמונה 6">
+										<div class="gallery-caption">חופי סרי-לנקה.</div>
+									</div>
+
+									<div class="gallery-item">
+										<img src="images/gallery/ofek4.jpg" alt="תמונה 7">
+										<div class="gallery-caption">האופנוע שלי בשטח.</div>
+									</div>
+
+									<div class="gallery-item">
+										<img src="images/gallery/ofek2.jpg" alt="תמונה 8">
+										<div class="gallery-caption">בריצה על החוף בשקיעה.</div>
 									</div>
 								</div>
+								<h2 style="margin-top: 40px;"> עילי</h2>
+									<div class="gallery-grid">
+									<div class="gallery-item">
+										<img src="images/gallery/ilay1.jpg" alt="תמונה 9">
+										<div class="gallery-caption">אני, עילי בטיול ביוון.</div>
+									</div>
+
+									<div class="gallery-item">
+										<img src="images/gallery/ilay3.jpg" alt="תמונה 10">
+										<div class="gallery-caption">התחביב האהוב, תכנות.</div>
+									</div>
+
+									<div class="gallery-item">
+										<img src="images/gallery/ilay4.jpg" alt="תמונה 11">
+										<div class="gallery-caption">באימון בחדר הכושר.</div>
+									</div>
+
+									<div class="gallery-item">
+										<img src="images/gallery/ilay2.jpg" alt="תמונה 12">
+										<div class="gallery-caption">מנגן בפסנתר.</div>
+									</div>
 							</article>
 
 						<!-- Elements -->
