--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
-    <!-- Wrapper -->
     <div id="wrapper">
 
-        <!-- Header -->
         <header id="header">
             <div class="content">
                 <div class="inner">
@@ -41,10 +40,8 @@
             </nav>
         </header>
 
-        <!-- Main -->
         <div id="main">
 
-            <!-- Work -->
             <article id="work">
                 <h2 class="major">תחביבים</h2>
                 <span class="image main"><img src="images/hobbies.png" alt="" /></span>
@@ -56,7 +53,6 @@
                 <p>בזמני הפנוי אני מנגן על פסנתר וגיטרה ואוהב לבלות עם חברים. מעבר לכך, אני פשוט אוהב לתכנת – ומשקיע זמן בפיתוח פרויקטים עצמאיים כדי לחדד את היכולות שלי ולהתנסות בטכנולוגיות חדשות.</p>
             </article>
 
-            <!-- About -->
             <article id="about">
                 <h2 class="major">אודות</h2>
                 <span class="image main"><img src="images/ourbg.png" alt="" /></span>
@@ -69,7 +65,7 @@
 כיום אני סטודנט למדעי המחשב במרכז האקדמי רופין. אני מביא איתי יכולת למידה עצמית מהירה, יחסי אנוש מצוינים ושאיפה להשתלב ולהתפתח בתעשיית התוכנה.</p>
             </article>
 
-            <!-- Contact -->
+
             <article id="contact">
                 <h2 class="major">צור קשר</h2>
                 <p>מצאו אותנו ברשת:</p>
@@ -125,7 +121,6 @@
                 </form>
             </article>
 
-            <!-- Gallery -->
             <article id="gallery">
                 <h2 class="major">גלריה</h2>
                 <p>רגעים קטנים וגדולים שתפסנו לאורך הדרך: חוויות, זיכרונות וסיפורים שמתחברים יחד ומספרים את המסע שלנו. כל תמונה היא פריים אחד מתוך עולם שלם — ואנחנו מזמינים אתכם להציץ פנימה.</p>
@@ -193,20 +188,15 @@
 
         </div>
 
-        <!-- Footer -->
         <footer id="footer">
             <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
         </footer>
 
     </div>
 
-    <!-- BG -->
-    <div id="bg"></div>
 
-    <!-- Bootstrap JS Bundle -->
+    <div id="bg"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <!-- Custom Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
