--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 	<html dir="rtl" lang="he"></html>
 <html>
 	<head>
@@ -46,7 +42,7 @@
                 <h2 class="major">תחביבים</h2>
                 <span class="image main"><img src="images/hobbies.png" alt="" /></span>
                 <h2>עמר איפנברג</h2>
-                <p>בזמני הפנוי אני אוהב להיות בתנועה — מתאמן בחדר כושר מגיל 14, ותמיד שמח להזדמנות לשחק כדורסל או טניס. פעילות גופנית עושה לי טוב לגוף ולנפש. בנוסף, אני נהנה לבשל ולהכין אוכל למשפחה ולחברים, ובעיקר לראות אותם נהנים ממה שהכנתי. אני אוהב להתנסות במתכונים חדשים ולגלות טעמים שונים. התחביב האהוב עליי, ואולי גם היקר ביותר, הוא לטייל. בשנתיים האחרונות ביקרתי בארה״ב, תאילנד, אפריקה, איטליה ועוד — וכל מסע פותח לי את הראש ואת הלב.</p>
+                <p>בזמני הפנוי אני אוהב להיות בתנועה - מתאמן בחדר כושר מגיל 14, ותמיד שמח להזדמנות לשחק כדורסל או טניס. פעילות גופנית עושה לי טוב לגוף ולנפש. בנוסף, אני נהנה לבשל ולהכין אוכל למשפחה ולחברים, ובעיקר לראות אותם נהנים ממה שהכנתי. אני אוהב להתנסות במתכונים חדשים ולגלות טעמים שונים. התחביב האהוב עליי, ואולי גם היקר ביותר, הוא לטייל. בשנתיים האחרונות ביקרתי בארה״ב, תאילנד, אפריקה, יוון איטליה ועוד - וכל מסע פותח לי את הראש ואת הלב.</p>
                 <h2>אופק כהן</h2>
                 <p>אני אופק כהן, בן 27 גר בטירת הכרמל. התחלתי את השירות שלי כלוחם בעורב גולני ועקב פציעה ירדתי מהתפקיד עברתי לבסיס פיקוד הצפון שם סיימתי את השירות שלי לאחר הצבא התחלתי לטייל מסביב לעולם ושם הבנתי שאני רוצה ללמוד משהו שיאפשר לי גם לטייל וגם לעבוד מרחוק כיום אני סטודנט שנה שנייה למדעי המחשב.</p>
                 <h2>עילי פישר</h2>
@@ -85,7 +81,7 @@
                         <h3>אופק כהן</h3>
                         <ul class="icons">
                             <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="https://www.instagram.com/offekx_?igsh=YW52MzF3MW5zZG1h" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                         </ul>
                     </div>
 
@@ -123,7 +119,7 @@
 
             <article id="gallery">
                 <h2 class="major">גלריה</h2>
-                <p>רגעים קטנים וגדולים שתפסנו לאורך הדרך: חוויות, זיכרונות וסיפורים שמתחברים יחד ומספרים את המסע שלנו. כל תמונה היא פריים אחד מתוך עולם שלם — ואנחנו מזמינים אתכם להציץ פנימה.</p>
+                <p>רגעים קטנים וגדולים שתפסנו לאורך הדרך: חוויות, זיכרונות וסיפורים שמתחברים יחד ומספרים את המסע שלנו. כל תמונה היא פריים אחד מתוך עולם שלם - ואנחנו מזמינים אתכם להציץ פנימה.</p>
 
                 <h2>עמר</h2>
                 <div class="gallery-grid">
@@ -189,7 +185,7 @@
         </div>
 
         <footer id="footer">
-            <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p class="copyright">&copy; Omer, Ofek & Ilay 
         </footer>
 
     </div>
