--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="contact-person">
                         <h3>אופק כהן</h3>
                         <ul class="icons">
-                            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                            <li><a href="https://www.facebook.com/share/1AMURGaD2D/?mibextid=wwXIfr" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                             <li><a href="https://www.instagram.com/offekx_?igsh=YW52MzF3MW5zZG1h" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                         </ul>
                     </div>
